[gd_scene format=3 uid="uid://dcbn6tmtfv7a2"]

[ext_resource type="Script" uid="uid://cv5d0hlb335qi" path="res://Scripts/pause_menu.gd" id="1_emv3i"]

[node name="PauseMenu" type="Control" unique_id=1651803569]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_emv3i")

[node name="Panel" type="Panel" parent="." unique_id=1405926245]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="Panel" unique_id=1134904667]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -158.5
offset_top = -190.0
offset_right = 158.5
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "Resume"

[node name="QuitGameButton" type="Button" parent="Panel" unique_id=698974064]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 53.000122
offset_right = 160.0
offset_bottom = 144.00012
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "Quit Game"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="Panel/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
